--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hypnoticvoyager</title>
   </head>
   <body>
     <canvas id="starryBg" width="640" height="480"></canvas>
-    <script src="/src/cosmetic/stars.js"></script>
+    <script src="/scripts/stars.js"></script>
 
     <div id="root"></div>
 
